--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
                     odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     </p>
-                    <button type="button" class="btn btn-block btn-outline-light ">PARAR</button>
+                    <button type="button" class="btn btn-block mb-2 btn-outline-light " style="margin-top:120px">PARAR</button>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 text-light mt-5  optionsDisplay">
                 <ul>
